fix some Sonatype liftbot recommendations